--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+numpy==1.11.2
 oauthlib==2.0.1
+pandas==0.19.1
+python-dateutil==2.6.0
+pytz==2016.10
 requests==2.12.3
 requests-oauthlib==0.7.0
+six==1.10.0
